workshop04/minio-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: data-146-190-193-151.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port: 
              name: minio-api-port
  - host: console-146-190-193-151.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port: 
              name: minio-con-port
